libqt6c/src/libqaccessible.hpp

typedef QAccessible::State QAccessible__State;
typedef struct QAccessibleActionInterface QAccessibleActionInterface;
typedef struct QAccessibleEditableTextInterface QAccessibleEditableTextInterface;
typedef struct QAccessibleHyperlinkInterface QAccessibleHyperlinkInterface;
typedef struct QAccessibleImageInterface QAccessibleImageInterface;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QAccessibleTableCellInterface QAccessibleTableCellInterface;
typedef struct QAccessibleTableInterface QAccessibleTableInterface;
typedef struct QAccessibleTextInterface QAccessibleTextInterface;
typedef struct QAccessibleValueInterface QAccessibleValueInterface;
typedef struct QAccessible__State QAccessible__State;
typedef struct QColor QColor;
typedef struct QRect QRect;
typedef struct QWindow QWindow;
QWindow* QAccessibleInterface_Window(const QAccessibleInterface* self);
libqt_list /* of pair_qaccessibleinterface_int32_t tuple of QAccessibleInterface* and int */ QAccessibleInterface_Relations(const QAccessibleInterface* self, int match);
QAccessibleInterface* QAccessibleInterface_FocusChild(const QAccessibleInterface* self);
QAccessibleInterface* QAccessibleInterface_ChildAt(const QAccessibleInterface* self, int x, int y);
QAccessibleInterface* QAccessibleInterface_Parent(const QAccessibleInterface* self);
QAccessibleInterface* QAccessibleInterface_Child(const QAccessibleInterface* self, int index);
int QAccessibleInterface_ChildCount(const QAccessibleInterface* self);
int QAccessibleInterface_IndexOfChild(const QAccessibleInterface* self, const QAccessibleInterface* param1);
libqt_string QAccessibleInterface_Text(const QAccessibleInterface* self, int t);
void QAccessibleInterface_SetText(QAccessibleInterface* self, int t, const libqt_string text);
QRect* QAccessibleInterface_Rect(const QAccessibleInterface* self);
int QAccessibleInterface_Role(const QAccessibleInterface* self);
QAccessible__State* QAccessibleInterface_State(const QAccessibleInterface* self);
QColor* QAccessibleInterface_ForegroundColor(const QAccessibleInterface* self);
QColor* QAccessibleInterface_BackgroundColor(const QAccessibleInterface* self);
QAccessibleTextInterface* QAccessibleInterface_TextInterface(QAccessibleInterface* self);
QAccessibleEditableTextInterface* QAccessibleInterface_EditableTextInterface(QAccessibleInterface* self);
QAccessibleValueInterface* QAccessibleInterface_ValueInterface(QAccessibleInterface* self);
QAccessibleActionInterface* QAccessibleInterface_ActionInterface(QAccessibleInterface* self);
QAccessibleImageInterface* QAccessibleInterface_ImageInterface(QAccessibleInterface* self);
QAccessibleTableInterface* QAccessibleInterface_TableInterface(QAccessibleInterface* self);
QAccessibleTableCellInterface* QAccessibleInterface_TableCellInterface(QAccessibleInterface* self);
QAccessibleHyperlinkInterface* QAccessibleInterface_HyperlinkInterface(QAccessibleInterface* self);