QtBeef/src/Qt/qaccessible.bf

	
	[LinkName("QAccessibleInterface_SuperObject")]
	public static extern void** QAccessibleInterface_SuperObject(void* self);
	[LinkName("QAccessibleInterface_Window")]
	public static extern void** QAccessibleInterface_Window(void* self);
	
	public function void QAccessibleInterface_OnWindow_action(void* self);
	[LinkName("QAccessibleInterface_OnWindow")]
	public static extern void** QAccessibleInterface_OnWindow(void* self, QAccessibleInterface_OnWindow_action _action);
	
	[LinkName("QAccessibleInterface_SuperWindow")]
	public static extern void** QAccessibleInterface_SuperWindow(void* self);
	[LinkName("QAccessibleInterface_Relations")]
	public static extern void* QAccessibleInterface_Relations(void* self, void* match);
	
	public function void QAccessibleInterface_OnRelations_action(void* self, void* match);
	[LinkName("QAccessibleInterface_OnRelations")]
	public static extern void* QAccessibleInterface_OnRelations(void* self, QAccessibleInterface_OnRelations_action _action);
	
	[LinkName("QAccessibleInterface_SuperRelations")]
	public static extern void* QAccessibleInterface_SuperRelations(void* self, void* match);
	[LinkName("QAccessibleInterface_FocusChild")]
	public static extern void** QAccessibleInterface_FocusChild(void* self);
	
	public function void QAccessibleInterface_OnFocusChild_action(void* self);
	[LinkName("QAccessibleInterface_OnFocusChild")]
	public static extern void** QAccessibleInterface_OnFocusChild(void* self, QAccessibleInterface_OnFocusChild_action _action);
	
	[LinkName("QAccessibleInterface_SuperFocusChild")]
	public static extern void** QAccessibleInterface_SuperFocusChild(void* self);
	[LinkName("QAccessibleInterface_ChildAt")]
	public static extern void** QAccessibleInterface_ChildAt(void* self, c_int x, c_int y);
	
	public function void QAccessibleInterface_OnChildAt_action(void* self, c_int x, c_int y);
	[LinkName("QAccessibleInterface_OnChildAt")]
	public static extern void** QAccessibleInterface_OnChildAt(void* self, QAccessibleInterface_OnChildAt_action _action);
	
	[LinkName("QAccessibleInterface_SuperChildAt")]
	public static extern void** QAccessibleInterface_SuperChildAt(void* self, c_int x, c_int y);
	[LinkName("QAccessibleInterface_Parent")]
	public static extern void** QAccessibleInterface_Parent(void* self);
	
	public function void QAccessibleInterface_OnParent_action(void* self);
	[LinkName("QAccessibleInterface_OnParent")]
	public static extern void** QAccessibleInterface_OnParent(void* self, QAccessibleInterface_OnParent_action _action);
	
	[LinkName("QAccessibleInterface_SuperParent")]
	public static extern void** QAccessibleInterface_SuperParent(void* self);
	[LinkName("QAccessibleInterface_Child")]
	public static extern void** QAccessibleInterface_Child(void* self, c_int index);
	
	public function void QAccessibleInterface_OnChild_action(void* self, c_int index);
	[LinkName("QAccessibleInterface_OnChild")]
	public static extern void** QAccessibleInterface_OnChild(void* self, QAccessibleInterface_OnChild_action _action);
	
	[LinkName("QAccessibleInterface_SuperChild")]
	public static extern void** QAccessibleInterface_SuperChild(void* self, c_int index);
	[LinkName("QAccessibleInterface_ChildCount")]
	public static extern c_int QAccessibleInterface_ChildCount(void* self);
	
	public function void QAccessibleInterface_OnChildCount_action(void* self);
	[LinkName("QAccessibleInterface_OnChildCount")]
	public static extern c_int QAccessibleInterface_OnChildCount(void* self, QAccessibleInterface_OnChildCount_action _action);
	
	[LinkName("QAccessibleInterface_SuperChildCount")]
	public static extern c_int QAccessibleInterface_SuperChildCount(void* self);
	[LinkName("QAccessibleInterface_IndexOfChild")]
	public static extern c_int QAccessibleInterface_IndexOfChild(void* self, void** param1);
	
	public function void QAccessibleInterface_OnIndexOfChild_action(void* self, void** param1);
	[LinkName("QAccessibleInterface_OnIndexOfChild")]
	public static extern c_int QAccessibleInterface_OnIndexOfChild(void* self, QAccessibleInterface_OnIndexOfChild_action _action);
	
	[LinkName("QAccessibleInterface_SuperIndexOfChild")]
	public static extern c_int QAccessibleInterface_SuperIndexOfChild(void* self, void** param1);
	[LinkName("QAccessibleInterface_Text")]
	public static extern libqt_string QAccessibleInterface_Text(void* self, QAccessible_Text t);
	
	public function void QAccessibleInterface_OnText_action(void* self, QAccessible_Text t);
	[LinkName("QAccessibleInterface_OnText")]
	public static extern libqt_string QAccessibleInterface_OnText(void* self, QAccessibleInterface_OnText_action _action);
	
	[LinkName("QAccessibleInterface_SuperText")]
	public static extern libqt_string QAccessibleInterface_SuperText(void* self, QAccessible_Text t);
	[LinkName("QAccessibleInterface_SetText")]
	public static extern void QAccessibleInterface_SetText(void* self, QAccessible_Text t, libqt_string text);
	
	public function void QAccessibleInterface_OnSetText_action(void* self, QAccessible_Text t, libqt_string text);
	[LinkName("QAccessibleInterface_OnSetText")]
	public static extern void QAccessibleInterface_OnSetText(void* self, QAccessibleInterface_OnSetText_action _action);
	
	[LinkName("QAccessibleInterface_SuperSetText")]
	public static extern void QAccessibleInterface_SuperSetText(void* self, QAccessible_Text t, libqt_string text);
	[LinkName("QAccessibleInterface_Rect")]
	public static extern void* QAccessibleInterface_Rect(void* self);
	
	public function void QAccessibleInterface_OnRect_action(void* self);
	[LinkName("QAccessibleInterface_OnRect")]
	public static extern void* QAccessibleInterface_OnRect(void* self, QAccessibleInterface_OnRect_action _action);
	
	[LinkName("QAccessibleInterface_SuperRect")]
	public static extern void* QAccessibleInterface_SuperRect(void* self);
	[LinkName("QAccessibleInterface_Role")]
	public static extern QAccessible_Role QAccessibleInterface_Role(void* self);
	
	public function void QAccessibleInterface_OnRole_action(void* self);
	[LinkName("QAccessibleInterface_OnRole")]
	public static extern QAccessible_Role QAccessibleInterface_OnRole(void* self, QAccessibleInterface_OnRole_action _action);
	
	[LinkName("QAccessibleInterface_SuperRole")]
	public static extern QAccessible_Role QAccessibleInterface_SuperRole(void* self);
	[LinkName("QAccessibleInterface_State")]
	public static extern void* QAccessibleInterface_State(void* self);
	
	public function void QAccessibleInterface_OnState_action(void* self);
	[LinkName("QAccessibleInterface_OnState")]
	public static extern void* QAccessibleInterface_OnState(void* self, QAccessibleInterface_OnState_action _action);
	
	[LinkName("QAccessibleInterface_SuperState")]
	public static extern void* QAccessibleInterface_SuperState(void* self);
	[LinkName("QAccessibleInterface_ForegroundColor")]
	public static extern void* QAccessibleInterface_ForegroundColor(void* self);
	
	public function void QAccessibleInterface_OnForegroundColor_action(void* self);
	[LinkName("QAccessibleInterface_OnForegroundColor")]
	public static extern void* QAccessibleInterface_OnForegroundColor(void* self, QAccessibleInterface_OnForegroundColor_action _action);
	
	[LinkName("QAccessibleInterface_SuperForegroundColor")]
	public static extern void* QAccessibleInterface_SuperForegroundColor(void* self);
	[LinkName("QAccessibleInterface_BackgroundColor")]
	public static extern void* QAccessibleInterface_BackgroundColor(void* self);
	
	public function void QAccessibleInterface_OnBackgroundColor_action(void* self);
	[LinkName("QAccessibleInterface_OnBackgroundColor")]
	public static extern void* QAccessibleInterface_OnBackgroundColor(void* self, QAccessibleInterface_OnBackgroundColor_action _action);
	
	[LinkName("QAccessibleInterface_SuperBackgroundColor")]
	public static extern void* QAccessibleInterface_SuperBackgroundColor(void* self);
	[LinkName("QAccessibleInterface_TextInterface")]
	public static extern void** QAccessibleInterface_TextInterface(void* self);
	[LinkName("QAccessibleInterface_EditableTextInterface")]
	public static extern void** QAccessibleInterface_EditableTextInterface(void* self);
	[LinkName("QAccessibleInterface_ValueInterface")]
	public static extern void** QAccessibleInterface_ValueInterface(void* self);
	[LinkName("QAccessibleInterface_ActionInterface")]
	public static extern void** QAccessibleInterface_ActionInterface(void* self);
	[LinkName("QAccessibleInterface_ImageInterface")]
	public static extern void** QAccessibleInterface_ImageInterface(void* self);
	[LinkName("QAccessibleInterface_TableInterface")]
	public static extern void** QAccessibleInterface_TableInterface(void* self);
	[LinkName("QAccessibleInterface_TableCellInterface")]
	public static extern void** QAccessibleInterface_TableCellInterface(void* self);
	[LinkName("QAccessibleInterface_HyperlinkInterface")]
	public static extern void** QAccessibleInterface_HyperlinkInterface(void* self);
	[LinkName("QAccessibleInterface_Virtual_Hook")]
	public static extern void QAccessibleInterface_Virtual_Hook(void* self, c_int id, void* data);
	
	public function void QAccessibleInterface_OnVirtual_Hook_action(void* self, c_int id, void* data);
	[LinkName("QAccessibleInterface_OnVirtual_Hook")]
	public static extern void QAccessibleInterface_OnVirtual_Hook(void* self, QAccessibleInterface_OnVirtual_Hook_action _action);
	
	[LinkName("QAccessibleInterface_SuperVirtual_Hook")]
	public static extern void QAccessibleInterface_SuperVirtual_Hook(void* self, c_int id, void* data);
	[LinkName("QAccessibleInterface_Interface_Cast")]
	public static extern void* QAccessibleInterface_Interface_Cast(void* self, QAccessible_InterfaceType param1);
	
	public function void QAccessibleInterface_OnInterface_Cast_action(void* self, QAccessible_InterfaceType param1);
	[LinkName("QAccessibleInterface_OnInterface_Cast")]
	public static extern void* QAccessibleInterface_OnInterface_Cast(void* self, QAccessibleInterface_OnInterface_Cast_action _action);
	
	[LinkName("QAccessibleInterface_SuperInterface_Cast")]
	public static extern void* QAccessibleInterface_SuperInterface_Cast(void* self, QAccessible_InterfaceType param1);
	[LinkName("QAccessibleInterface_OperatorAssign")]
	public static extern void QAccessibleInterface_OperatorAssign(void* self, void** param1);
}
